[package]
name = "wascc-host"
version = "0.9.0"
authors = ["Kevin Hoffman <alothien@gmail.com>"]
edition = "2018"
homepage = "https://wascc.dev"
repository = "https://github.com/wascc/wascc-host"
description = "WebAssembly Secure Capabilities Connector (waSCC) Host Runtime"
license = "Apache-2.0"
documentation = "https://docs.rs/wascc-host"
readme = "README.md"
keywords = ["webassembly", "wasm", "wasi", "wascc", "wapc"]
categories = ["wasm", "api-bindings","command-line-utilities"]
exclude = ["examples/.assets"]

[package.metadata.docs.rs]
features = [ "gantry", "manifest" ]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
libloading = "0.6.2"
crossbeam-channel = "0.4.2"
crossbeam = "0.7.3"
crossbeam-utils = "^0.7.0"
prometheus = { version = "0.9", features = ["push"], optional = true }
hyper = { version = "0.13", optional = true }
tokio = { version = "0.2", features = ["macros"], optional = true }
#wapc = "0.7.2"
wapc = { version = "0.7.2", path = "../wapc-rust" }
wascc-codec = "0.7.1"
wascap = "0.4.5"
log = "0.4.8"
rand = "0.7.3"
env_logger = "0.7.1"

uuid = { version = "0.8", features = ["serde", "v4"] }

gantryclient = { version = "0.0.7", optional = true }
nats = { version = "0.5.0", optional = true }

serde = { version = "1.0", features = ["derive"], optional = true }
serde_yaml = { version = "0.8.13", optional = true }
serde_json = { version = "1.0", optional = true }
envmnt = { version = "0.8.2", optional = true }

structopt = { version = "0.3.14", optional = true }

[dev-dependencies]
reqwest = { version = "0.10", features = ["blocking"] }
mockito = "0.25"

[features]
default = []
manifest = ["serde", "serde_yaml", "serde_json", "envmnt"]
bin = ["structopt"]
gantry = ["gantryclient"]
prometheus_middleware = ["prometheus", "hyper", "tokio"]
lattice = ["nats", "serde"]

[[example]]
name = "kvcounter_manifest"
required-features = ["manifest"]

[[bin]]
name = "wascc-host"
path = "src/bin.rs"
required-features = ["manifest", "bin"]
