[package]
name = "wascc-host"
version = "0.12.0"
authors = ["Kevin Hoffman <alothien@gmail.com>"]
edition = "2018"
homepage = "https://wascc.dev"
repository = "https://github.com/wascc/wascc-host"
description = "WebAssembly Secure Capabilities Connector (waSCC) Host Runtime"
license = "Apache-2.0"
documentation = "https://docs.rs/wascc-host"
readme = "README.md"
keywords = ["webassembly", "wasm", "wasi", "wascc", "wapc"]
categories = ["wasm", "api-bindings","command-line-utilities"]
exclude = ["examples/.assets"]
autotests = false

[[test]]
name = "integration"
path = "tests/lib.rs"

[package.metadata.docs.rs]
features = [ "gantry", "manifest", "lattice" ]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
libloading = "0.6.3"
crossbeam-channel = "0.4.3"
crossbeam = "0.7.3"
crossbeam-utils = "^0.7.0"
prometheus = { version = "0.9", features = ["push"], optional = true }
hyper = { version = "0.13", optional = true }
tokio = { version = "0.2", features = ["macros"], optional = true }
wapc = "0.9"
wascc-codec = "0.8"
wascap = "0.5.0"
log = "0.4.11"
rand = "0.7.3"
env_logger = "0.7.1"
ring = "0.16.15"
data-encoding = "2.3.0"

# Opt-in dependencies chosen by feature flags
uuid = { version = "0.8", features = ["serde", "v4"] }
gantryclient = { version = "0.0.7", optional = true }
nats = { version = "0.7.3", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_yaml = { version = "0.8.13", optional = true }
serde_json = { version = "1.0", optional = true }
envmnt = { version = "0.8.4", optional = true }
structopt = { version = "0.3.17", optional = true }
latticeclient = { version = "0.2.1" , optional = true}
ctrlc = { version = "3.1.6", features = ["termination"], optional = true}

[dev-dependencies]
reqwest = { version = "0.10", features = ["blocking"] }
mockito = "0.27"
redis = "0.17.0"
nats = "0.7.3"


[features]
default = []
manifest = ["serde", "serde_yaml", "serde_json", "envmnt"]
bin = ["structopt", "ctrlc"]
gantry = ["gantryclient"]
prometheus_middleware = ["prometheus", "hyper", "tokio"]
lattice = ["nats", "serde", "latticeclient", "serde_json"]

[[example]]
name = "kvcounter_manifest"
required-features = ["manifest"]

[[bin]]
name = "wascc-host"
path = "src/bin.rs"
required-features = ["manifest", "bin"]
